--- a/public/TempSuryamart/suryamart/mart/html/assets/surya/index-6.html
+++ b/public/TempSuryamart/suryamart/mart/html/assets/surya/index-6.html
@@ -74,7 +74,7 @@
                                             <ul>
                                                 <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                                
+
                                                 <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                                 <li><a href="#" title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
                                             </ul>
@@ -534,7 +534,7 @@
                 </div>
             </div>
             <!-- ltn__slide-item -->
-            <div class="ltn__slide-item ltn__slide-item-2 ltn__slide-item-3 text-color-white bg-image" data-bg="img/slider/12.jpg">
+            <div class="ltn__slide-item ltn__slide-item-2 ltn__slide-item-3 text-color-white bg-image" data-bg="img/suryamart/surya.jpeg">
                 <div class="ltn__slide-item-inner  text-right">
                     <div class="container">
                         <div class="row">
@@ -4359,7 +4359,7 @@
                                             <div class="modal-product-meta ltn__product-details-menu-1">
                                                 <ul>
                                                     <li>
-                                                        <strong>Categories:</strong> 
+                                                        <strong>Categories:</strong>
                                                         <span>
                                                             <a href="#">Parts</a>
                                                             <a href="#">Car</a>
@@ -4408,7 +4408,7 @@
                                                     <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                                                     <li><a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a></li>
                                                     <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                                                    
+
                                                 </ul>
                                             </div>
                                         </div>
@@ -4528,7 +4528,7 @@
     <script src="js/plugins.js"></script>
     <!-- Main JS -->
     <script src="js/main.js"></script>
-  
+
 </body>
 
 <!-- Mirrored from tunatheme.com/tf/html/broccoli-preview/broccoli/index-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 24 Nov 2022 01:25:05 GMT -->
